# progress1bar

./: Dockerfile  Makefile  README.md  build.py  build.sh  pyproject.toml
.github/workflows/: ci.yml  main.yml
examples/: example1.py  example2.py  example2b.py  example2c.py  example2d.py  example3.py  example4.py  example5.py
progress1bar/: __init__.py  completable.py  durationable.py  progressbar.py  resettable.py
src/main/python/progress1bar/: __init__.py  aliasable.py  completable.py  fillable.py  matchable.py  prefixable.py  progressbar.py
src/unittest/python/: test_aliasable.py  test_completable.py  test_durationable.py  test_fillable.py  test_matchable.py  test_prefixable.py  test_progressbar.py  test_resettable.py
tests/: test_progressbar.py
